Add default finex influx config

--- a/templates/config/finex/config.yaml.erb
+++ b/templates/config/finex/config.yaml.erb
@@ -1,3 +1,10 @@
+influx:
+  host: influxdb
+  port: 8086
+  scheme: http
+  database: peatio_production
+  username: root
+  password: root
 database:
   driver: mysql
   name: peatio_production
