--- a/templates/compose/backend.yaml.erb
+++ b/templates/compose/backend.yaml.erb
@@ -3,12 +3,11 @@ version: '3.6'
 services:
   db:
     restart: always
-    image: mysql:5.7
+    image: postgres:13
     volumes:
-      - db_data:/var/lib/mysql
-      - ../config/mysql:/etc/mysql/conf.d
+      - ../data/db:/var/lib/postgresql/data
     environment:
-      MYSQL_ROOT_PASSWORD: changeme
+      POSTGRES_PASSWORD: changeme
 
   influxdb:
     image: influxdb:1.7.10
