Feature: Add support for PostgreSQL
* Updated seeds with the 2.6 format

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -8,6 +8,12 @@ RAILS_ENV=production
 
 SECRET_KEY_BASE=64
 
+<%- if @config['database']['adapter'] == 'postgresql' %>
+DATABASE_COLLATION=""
+DATABASE_ADAPTER="postgresql"
+<%- elsif @config['database']['adapter'] == 'mysql' %>
+DATABASE_ADAPTER="mysql2"
+<%- end %>
 DATABASE_HOST=<%= @config['database']['host'] %>
 DATABASE_PORT=<%= @config['database']['port'] %>
 DATABASE_USER=<%= @config['database']['user'] %>
