--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -8,10 +8,6 @@ window.env = {
     },
     minutesUntilAutoLogout: '35',
     withCredentials: false,
-    captcha: {
-        captchaType: '<%= @config['captcha']['type'] %>',
-        siteKey: '<%= @config['captcha']['siteKey'] %>',
-    },
     finex: <%= config['finex']['enabled'] %>,
     gaTrackerKey: '<%= @config['gaTrackerKey'] %>',
     rangerReconnectPeriod: '1',
@@ -23,6 +19,8 @@ window.env = {
     sessionCheckInterval: '15000',
     balancesFetchInterval: '3000',
     passwordEntropyStep: 14,
+    showLanding: true,
+    sentryEnabled: false,
     kycSteps: [
       'email',
       'phone',
