--- a/templates/config/peatio.env.erb
+++ b/templates/config/peatio.env.erb
@@ -8,12 +8,18 @@ LOG_LEVEL=warn
 
 ADMIN=admin@barong.io
 
+<%- if @config['database']['adapter'] == 'postgresql' %>
+DATABASE_COLLATION=""
+DATABASE_ADAPTER="postgresql"
+<%- elsif @config['database']['adapter'] == 'mysql' %>
+DATABASE_ADAPTER="mysql2"
+<%- end %>
 DATABASE_HOST=<%= @config['database']['host'] %>
 DATABASE_PORT=<%= @config['database']['port'] %>
 DATABASE_USER=<%= @config['database']['user'] %>
 DATABASE_PASS=<%= @config['database']['password'] %>
 
-VAULT_URL=http://vault:8200
+VAULT_ADDR=http://vault:8200
 VAULT_TOKEN=<%= @config['vault']['token'] %>
 VAULT_APP_NAME=<%= @config['app']['name'].downcase %>
 
