add show_landing variable to app.yml and use it for fronted/env.js

--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -24,6 +24,7 @@ window.env = {
     sessionCheckInterval: '15000',
     balancesFetchInterval: '3000',
     passwordEntropyStep: 14,
+    showLanding: <%= @config['show_landing']['enabled'] %>,
     kycSteps: [
       'email',
       'phone',
