Enhancement: Update component versions

--- a/templates/config/frontend/tower.js.erb
+++ b/templates/config/frontend/tower.js.erb
@@ -68,4 +68,6 @@ window.env = {
     ],
     withCredentials: false,
     sentryEnabled: false,
+    devMode: true,
+    minutesBeforeWarningMessage: '1',
 };
