--- a/templates/config/finex/config.yaml.erb
+++ b/templates/config/finex/config.yaml.erb
@@ -1,6 +1,11 @@
 metrics:
   enabled: true
 license: <%= @config['finex']['license_key'] %>
+influx:
+  host: influxdb
+  port: 8086
+  scheme: http
+  database: peatio_production
 database:
   driver: mysql
   name: peatio_production
