--- a/templates/config/peatio.env.erb
+++ b/templates/config/peatio.env.erb
@@ -20,7 +20,7 @@ DATABASE_USER=<%= @config['database']['user'] %>
 DATABASE_PASS=<%= @config['database']['password'] %>
 
 VAULT_ADDR=http://vault:8200
-VAULT_TOKEN=<%= @config['vault']['token'] %>
+VAULT_TOKEN=
 VAULT_APP_NAME=<%= @config['app']['name'].downcase %>
 
 REDIS_URL=redis://redis:6379
