--- a/templates/.env.erb
+++ b/templates/.env.erb
@@ -1,2 +1,6 @@
 COMPOSE_PROJECT_NAME=<%= @config['app']['name'].downcase %>
 COMPOSE_FILE=compose/app.yaml:compose/backend.yaml:compose/gateway.yaml:compose/proxy.yaml:compose/daemons.yaml:compose/frontend.yaml:compose/cryptonodes.yaml:compose/arke.yaml:compose/superset.yaml:compose/monitoring.yaml
+PEATIO_RAILS_VAULT_TOKEN=<%= @config['vault']['peatio_rails_token'] %>
+PEATIO_CRYPTO_VAULT_TOKEN=<%= @config['vault']['peatio_crypto_token'] %>
+PEATIO_UPSTREAM_VAULT_TOKEN=<%= @config['vault']['peatio_upstream_token'] %>
+PEATIO_MATCHING_VAULT_TOKEN=<%= @config['vault']['peatio_matching_token'] %>
