--- a/templates/compose/daemons.yaml.erb
+++ b/templates/compose/daemons.yaml.erb
@@ -17,19 +17,19 @@ services:
     << : *peatio-daemon
     environment:
     - VAULT_TOKEN=${PEATIO_CRYPTO_VAULT_TOKEN}
-    command: bash -c "bin/link_config && bundle exec ruby lib/daemons/daemons.rb cron_job"
+    command: bash -c "bin/link_config && kaigara -name cron_job -exec bundle exec ruby lib/daemons/daemons.rb cron_job"
 
   deposit:
     << : *peatio-daemon
     environment:
     - VAULT_TOKEN=${PEATIO_CRYPTO_VAULT_TOKEN}
-    command: bash -c "bin/link_config && bundle exec ruby lib/daemons/daemons.rb deposit"
+    command: bash -c "bin/link_config && kaigara -name deposit -exec bundle exec ruby lib/daemons/daemons.rb deposit"
 
   upstream:
     << : *peatio-daemon
     environment:
     - VAULT_TOKEN=${PEATIO_UPSTREAM_VAULT_TOKEN}
-    command: bash -c "bin/link_config && bundle exec ruby lib/daemons/daemons.rb upstream"
+    command: bash -c "bin/link_config && kaigara -name upstream -exec bundle exec ruby lib/daemons/daemons.rb upstream"
 
   deposit_coin_address:
     << : *peatio-daemon
@@ -41,11 +41,11 @@ services:
     << : *peatio-daemon
     environment:
     - VAULT_TOKEN=${PEATIO_CRYPTO_VAULT_TOKEN}
-    command: bash -c "bin/link_config && bundle exec ruby lib/daemons/amqp_daemon.rb withdraw_coin"
+    command: bash -c "bin/link_config && kaigara -name withdraw_coin -exec bundle exec ruby lib/daemons/amqp_daemon.rb withdraw_coin"
 
   influx_writer:
     << : *peatio-daemon
-    command: bash -c "bin/link_config && bundle exec ruby lib/daemons/amqp_daemon.rb influx_writer"
+    command: bash -c "bin/link_config && kaigara -name influx_writer -exec bundle exec ruby lib/daemons/amqp_daemon.rb influx_writer"
 
   rango:
     restart: always
@@ -65,13 +65,13 @@ services:
     << : *peatio-daemon
     environment:
     - VAULT_TOKEN=${PEATIO_MATCHING_VAULT_TOKEN}
-    command: bash -c "bin/link_config && bundle exec ruby lib/daemons/amqp_daemon.rb order_processor"
+    command: bash -c "bin/link_config && kaigara -name order_processor -exec bundle exec ruby lib/daemons/amqp_daemon.rb order_processor"
 
   trade_executor:
     << : *peatio-daemon
     environment:
     - VAULT_TOKEN=${PEATIO_MATCHING_VAULT_TOKEN}
-    command: bash -c "bin/link_config && bundle exec ruby lib/daemons/amqp_daemon.rb trade_executor"
+    command: bash -c "bin/link_config && kaigara -name trade_executor -exec bundle exec ruby lib/daemons/amqp_daemon.rb trade_executor"
 <% end %>
 
   mailer:
@@ -83,7 +83,7 @@ services:
       -  ../config/secrets:/secrets:ro
       -  ../config/mailer/templates:/home/app/app/views/postmaster
       -  ../config/mailer.yml:/home/app/config/mailer.yml
-    command: bash -c "bin/mailer run"
+    command: bash -c "kaigara -name mailer -exec bin/mailer run"
 
   applogic_sidekiq:
     restart: always
@@ -93,7 +93,7 @@ services:
     volumes:
       - ../config/applogic/management_api_v2.yml:/home/app/config/management_api_v2.yml
       - ../config/applogic/schedule.yml:/home/app/config/schedule.yml
-    command: bash -c "bundle exec sidekiq"
+    command: bash -c "kaigara -name applogic_sidekiq -exec bundle exec sidekiq"
 
   barong_sidekiq:
     restart: always
@@ -106,7 +106,7 @@ services:
       - ../config/barong/barong.yml:/home/app/config/barong.yml
       - ../config/barong/authz_rules.yml:/home/app/config/authz_rules.yml
       - ../config/barong/management_api.yml:/home/app/config/management_api.yml
-    command: bash -c "bundle exec sidekiq"
+    command: bash -c "kaigara -name barong_sidekiq -exec bundle exec sidekiq"
 
   listener:
     restart: always
