Feature: add show_landing (#237)

--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -19,7 +19,7 @@ window.env = {
     sessionCheckInterval: '15000',
     balancesFetchInterval: '3000',
     passwordEntropyStep: 14,
-    showLanding: true,
+    showLanding: <%= @config['app']['show_landing'] %>,
     sentryEnabled: false,
     kycSteps: [
       'email',
