--- a/templates/config/gateway/envoy.yaml.erb
+++ b/templates/config/gateway/envoy.yaml.erb
@@ -31,7 +31,7 @@ static_resources:
                   prefix: "/api/v2/sonic"
                 route:
                   cluster: sonic
-                  prefix_rewrite: "/api/v2/"
+                  prefix_rewrite: "/api/v2"
               - match:
                   prefix: "/api/v2/barong"
                 route:
