--- a/templates/secrets.yaml.erb
+++ b/templates/secrets.yaml.erb
@@ -86,7 +86,7 @@ secrets:
         barong_captcha: <%= @config['captcha']['type'] %>
         barong_password_min_entropy: '14'
         barong_password_use_dictionary: 'false'
-        barong_csrf_protection: <%= @config['csrfEnabled'] %>
+        barong_csrf_protection: '<%= @config['csrfEnabled'] %>'
         jwt_public_key: <%= @barong_public_key %>
       secret:
         jwt_private_key_path: /secrets/barong.key
@@ -129,6 +129,8 @@ secrets:
         database_name: sonic
         jwt_issuer: barong
         jwt_algo: RS256
+        vault_addr: http://vault:8200
+        deployment_id: <%= @config['app']['name'].downcase %>
       secret:
         vault_token: <%= @config['vault']['token'] %>
         jwt_private_key: <%= @barong_private_key %>
