--- a/templates/config/peatio.env.erb
+++ b/templates/config/peatio.env.erb
@@ -2,3 +2,4 @@ KAIGARA_VAULT_ADDR=http://vault:8200
 KAIGARA_VAULT_TOKEN=<%= @config['vault']['token'] %>
 KAIGARA_DEPLOYMENT_ID=<%= @config['app']['name'].downcase %>
 KAIGARA_APP_NAME=peatio
+KAIGARA_SCOPES=private,secret
