--- a/templates/secrets.yaml.erb
+++ b/templates/secrets.yaml.erb
@@ -43,12 +43,12 @@ secrets:
     scopes:
       public: {}
       private:
-        <%- if @config['database']['adapter'] == 'postgresql' %>
+        <%- if @config['database']['adapter'] == 'postgresql' -%>
         database_collation: ""
         database_adapter: postgresql
-        <%- elsif @config['database']['adapter'] == 'mysql' %>
+        <%- elsif @config['database']['adapter'] == 'mysql' -%>
         database_adapter: mysql2
-        <%- end %>
+        <%- end -%>
         log_level: warn
         disable_spring: 'true'
         barong_session_expire_time: '7200'
@@ -107,13 +107,13 @@ secrets:
         barong_twilio_phone_number: <%= @config['twilio']['phone_number'] %>
         barong_phone_verification: twilio_sms
         <%- end -%>
-        <% if @config['captcha']['type'] == 'recaptcha' %>
+        <%- if @config['captcha']['type'] == 'recaptcha' -%>
         barong_recaptcha_site_key: <%= @config['captcha']['siteKey'] %>
         barong_recaptcha_secret_key: <%= @config['captcha']['secretKey'] %>
-        <% elsif @config['captcha']['type'] == 'geetest' %>
+        <%- elsif @config['captcha']['type'] == 'geetest' -%>
         barong_geetest_id: <%= @config['captcha']['siteKey'] %>
         barong_geetest_key: <%= @config['captcha']['secretKey'] %>
-        <% end %>
+        <%- end -%>
         barong_storage_access_key: <%= @config['storage']['accessKey'] %>
         barong_storage_secret_key: <%= @config['storage']['secretKey'] %>
         barong_event_api_jwt_private_key: <%= @barong_private_key %>
@@ -134,3 +134,38 @@ secrets:
       secret:
         vault_token: <%= @config['vault']['token'] %>
         jwt_private_key: <%= @barong_private_key %>
+
+  peatio:
+    scopes:
+      public: {}
+      private:
+        log_level: warn
+        port: '8000'
+        <%- if @config['database']['adapter'] == 'postgresql' -%>
+        database_collation: ""
+        database_adapter: postgresql
+        <%- elsif @config['database']['adapter'] == 'mysql' -%>
+        database_adapter: mysql2
+        <%- end -%>
+        rails_root: /home/app
+        url_host: <%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>
+        admin: admin@barong.io
+        database_name: peatio_production
+        rabbitmq_host: rabbitmq
+        markets_config: /opt/peatio/config/seed/markets.yml
+        currencies_config: /opt/peatio/config/seed/currencies.yml
+        management_api_v1_config: /opt/peatio/config/management_api_v1.yml
+        jwt_audience: peatio,barong
+        jwt_public_key: <%= @barong_public_key %>
+        influxdb_host: influxdb
+        event_api_jwt_algorithm: RS256
+        event_api_rabbitmq_port: '5672'
+        minimum_member_level_for_deposit: '1'
+        minimum_member_level_for_withdraw: '3'
+        minimum_member_level_for_trading: '2'
+        force_secure_connection: 'false'
+      secret:
+        jwt_private_key: <%= @barong_private_key %>
+        event_api_rabbitmq_username: guest
+        event_api_rabbitmq_password: guest
+        secret_key_base: faiba2shei0Ae5gahCh4aipoh3meyaFi
