Update Peatio image + fix Peatio secrets

--- a/templates/secrets.yaml.erb
+++ b/templates/secrets.yaml.erb
@@ -36,6 +36,7 @@ secrets:
         database_user: <%=  @config['database']['user'] %>
         vault_app_name: opendax
         vault_address: http://vault:8200
+        vault_addr: http://vault:8200
       secret:
         database_pass: <%= @config['database']['password'] %>
 
@@ -151,6 +152,7 @@ secrets:
         url_host: <%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>
         admin: admin@barong.io
         database_name: peatio_production
+        redis_url: redis://redis:6379
         rabbitmq_host: rabbitmq
         markets_config: /opt/peatio/config/seed/markets.yml
         currencies_config: /opt/peatio/config/seed/currencies.yml
@@ -169,3 +171,4 @@ secrets:
         event_api_rabbitmq_username: guest
         event_api_rabbitmq_password: guest
         secret_key_base: faiba2shei0Ae5gahCh4aipoh3meyaFi
+        vault_token: <%= @config['vault']['token'] %>
