Fix Sonic Envoy config + add frontend vars

--- a/templates/secrets.yaml.erb
+++ b/templates/secrets.yaml.erb
@@ -3,11 +3,11 @@ secrets:
     scopes:
       public:
         api:
-          authUrl: 'http://www.app.local/api/v2/barong'
-          tradeUrl: 'http://www.app.local/api/v2/peatio'
-          finexUrl: 'http://www.app.local/api/v2/finex'
-          applogicUrl: 'http://www.app.local/api/v2/applogic'
-          rangerUrl: 'ws://www.app.local/api/v2/ranger'
+          authUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/barong'
+          tradeUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/peatio'
+          finexUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/finex'
+          applogicUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/applogic'
+          rangerUrl: '<%= ssl_helper('ws') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/ranger'
         minutesUntilAutoLogout: '35'
         withCredentials: 'false'
         finex: 'false'
@@ -20,6 +20,8 @@ secrets:
         languages: ['en', 'ru']
         sessionCheckInterval: '15000'
         balancesFetchInterval: '3000'
+        captcha_type: <%= @config['captcha']['type'] %>
+        password_min_enthropy: '14'
         passwordEntropyStep: '14'
         showLanding: 'true'
         sentryEnabled: 'false'
