Enhancement: Add ability to fetch kaisave
* Update component versions
* Switch to generating 3 RSA keys

--- a/templates/config/barong/management_api.yml.erb
+++ b/templates/config/barong/management_api.yml.erb
@@ -1,11 +1,11 @@
 keychain:
-  applogic:
+  sonic:
     algorithm: RS256
-    value: <%= @applogic_public_key %>
-    
+    value: <%= @sonic_public_key %>
+
 scopes:
   read_users:
     mandatory_signers:
-      - applogic
+      - sonic
     permitted_signers:
-      - applogic
+      - sonic
