--- a/templates/config/peatio/management_api_v1.yml.erb
+++ b/templates/config/peatio/management_api_v1.yml.erb
@@ -1,7 +1,7 @@
 keychain:
   applogic:
     algorithm: RS256
-    value: <%= @applogic_public_key %>
+    value: <%= @sonic_public_key %>
 
 scopes:
   read_operations:
