--- a/templates/secrets.yaml.erb
+++ b/templates/secrets.yaml.erb
@@ -55,7 +55,7 @@ secrets:
         log_level: warn
         disable_spring: 'true'
         barong_session_expire_time: '7200'
-        port: '8081'
+        port: '8080'
         rails_env: production
         barong_sender_email: <%= @config['smtp']['sender_email'] %>
         barong_smtp_user: <%= @config['smtp']['user'] %>
@@ -127,8 +127,8 @@ secrets:
     scopes:
       public: {}
       private:
-        peatio_url: http://peatio:8000
-        barong_url: http://barong:8001
+        peatio_url: http://peatio:8080
+        barong_url: http://barong:8080
         database_name: sonic
         jwt_issuer: barong
         jwt_algo: RS256
@@ -136,14 +136,14 @@ secrets:
         deployment_id: <%= @config['app']['name'].downcase %>
       secret:
         vault_token: <%= @config['vault']['token'] %>
-        jwt_private_key: <%= @barong_private_key %>
+        jwt_private_key: <%= @sonic_private_key %>
 
   peatio:
     scopes:
       public: {}
       private:
         log_level: warn
-        port: '8000'
+        port: '8080'
         <%- if @config['database']['adapter'] == 'postgresql' -%>
         database_collation: ""
         database_adapter: postgresql
@@ -169,7 +169,7 @@ secrets:
         minimum_member_level_for_trading: '2'
         force_secure_connection: 'false'
       secret:
-        jwt_private_key: <%= @barong_private_key %>
+        jwt_private_key: <%= @peatio_private_key %>
         event_api_rabbitmq_username: guest
         event_api_rabbitmq_password: guest
         secret_key_base: faiba2shei0Ae5gahCh4aipoh3meyaFi
