--- a/templates/compose/daemons.yaml.erb
+++ b/templates/compose/daemons.yaml.erb
@@ -17,31 +17,31 @@ services:
   cron_job:
     << : *peatio-daemon
     environment:
-    - VAULT_TOKEN=${PEATIO_CRYPTO_VAULT_TOKEN}
+      - VAULT_TOKEN=<%= @config['vault']['peatio_crypto_token'] %>
     command: bash -c "bin/link_config && kaigara bundle exec ruby lib/daemons/daemons.rb cron_job"
 
   deposit:
     << : *peatio-daemon
     environment:
-    - VAULT_TOKEN=${PEATIO_CRYPTO_VAULT_TOKEN}
+      - VAULT_TOKEN=<%= @config['vault']['peatio_crypto_token'] %>
     command: bash -c "bin/link_config && kaigara bundle exec ruby lib/daemons/daemons.rb deposit"
 
   upstream:
     << : *peatio-daemon
     environment:
-    - VAULT_TOKEN=${PEATIO_UPSTREAM_VAULT_TOKEN}
+      - VAULT_TOKEN=<%= @config['vault']['peatio_upstream_token'] %>
     command: bash -c "bin/link_config && kaigara bundle exec ruby lib/daemons/daemons.rb upstream"
 
   deposit_coin_address:
     << : *peatio-daemon
     environment:
-    - VAULT_TOKEN=${PEATIO_CRYPTO_VAULT_TOKEN}
+      - VAULT_TOKEN=<%= @config['vault']['peatio_crypto_token'] %>
     command: bash -c "bin/link_config && kaigara bundle exec ruby lib/daemons/amqp_daemon.rb deposit_coin_address"
 
   withdraw_coin:
     << : *peatio-daemon
     environment:
-    - VAULT_TOKEN=${PEATIO_CRYPTO_VAULT_TOKEN}
+      - VAULT_TOKEN=<%= @config['vault']['peatio_crypto_token'] %>
     command: bash -c "bin/link_config && kaigara bundle exec ruby lib/daemons/amqp_daemon.rb withdraw_coin"
 
   influx_writer:
@@ -59,19 +59,19 @@ services:
   matching:
     << : *peatio-daemon
     environment:
-    - VAULT_TOKEN=${PEATIO_MATCHING_VAULT_TOKEN}
+      - VAULT_TOKEN=<%= @config['vault']['peatio_matching_token'] %>
     command: bash -c "bin/link_config && kaigara bundle exec ruby lib/daemons/amqp_daemon.rb matching"
 
   order_processor:
     << : *peatio-daemon
     environment:
-    - VAULT_TOKEN=${PEATIO_MATCHING_VAULT_TOKEN}
+      - VAULT_TOKEN=<%= @config['vault']['peatio_matching_token'] %>
     command: bash -c "bin/link_config && kaigara bundle exec ruby lib/daemons/amqp_daemon.rb order_processor"
 
   trade_executor:
     << : *peatio-daemon
     environment:
-    - VAULT_TOKEN=${PEATIO_MATCHING_VAULT_TOKEN}
+      - VAULT_TOKEN=<%= @config['vault']['peatio_matching_token'] %>
     command: bash -c "bin/link_config && kaigara bundle exec ruby lib/daemons/amqp_daemon.rb trade_executor"
 <% end %>
 
