--- a/templates/config/barong/seeds.yml.erb
+++ b/templates/config/barong/seeds.yml.erb
@@ -5,17 +5,17 @@
 # model properties are listed at the very bottom of this models files.
 #
 # Note: email is the only required field here.
-users:
-  - email: admin@barong.io
-    password: 0lDHd9ufs9t@
-    role: admin
-    state: active
-    level: 3
-  - email: john@barong.io
-    password: Am8icnzEI3d!
-    role: member
-    state: active
-    level: 3
+users: []
+# - email: admin@barong.io
+#   password: 0lDHd9ufs9t@
+#   role: admin
+#   state: active
+#   level: 3
+# - email: john@barong.io
+#   password: Am8icnzEI3d!
+#   role: member
+#   state: active
+#   level: 3
 
 levels:
   - key: email
