--- a/templates/config/gateway/envoy.yaml.erb
+++ b/templates/config/gateway/envoy.yaml.erb
@@ -18,9 +18,11 @@ static_resources:
               - "*"
               cors:
                 allow_origin:
-                - "<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>"
-                allow_methods: "PUT, GET, POST"
-                allow_headers: "content-type, x-grpc-web"
+                - "*"
+                allow_methods: "PUT, GET, POST, DELETE, PATCH"
+                allow_headers: "content-type, x-grpc-web, total, page, x-csrf-token"
+                expose_headers: "total, page, x-csrf-token"
+                allow_credentials: true
                 filter_enabled:
                   default_value:
                     numerator: 100
