--- a/templates/config/vault/kaigara.hcl.erb
+++ b/templates/config/vault/kaigara.hcl.erb
@@ -1,8 +1,3 @@
-# Manage the transit secrets engine
-path "transit/keys/<%= @config['app']['name'].downcase %>_*" {
-  capabilities = ["create", "read", "list"]
-}
-
 # View the kv v2 data
 path "secret/data/<%= @config['app']['name'].downcase %>/*" {
   capabilities = ["read", "list"]
@@ -15,7 +10,7 @@ path "secret/metadata/<%= @config['app']['name'].downcase %>/*" {
 
 # Manage the transit secrets engine
 path "transit/keys/<%= @config['app']['name'].downcase %>_kaigara_*" {
-  capabilities = ["create", "read", "list"]
+  capabilities = ["create", "read", "list", "update"]
 }
 
 # Encrypt secrets data
