Add auth0 config to barong

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -8,6 +8,11 @@ RAILS_ENV=production
 
 SECRET_KEY_BASE=64
 
+<%- if @config['auth0']['enabled'] -%>
+AUTH0_DOMAIN=<%= @config['auth0']['domain'] %>
+AUTH0_CLIENT_ID=<%= @config['auth0']['client_id'] %>
+<%- end -%>
+
 <%- if @config['database']['adapter'] == 'postgresql' %>
 DATABASE_COLLATION=""
 DATABASE_ADAPTER="postgresql"
