Fix: add envs for sonic

--- a/templates/config/sonic.env.erb
+++ b/templates/config/sonic.env.erb
@@ -1,2 +1,5 @@
 KAIGARA_APP_NAME=sonic
 KAIGARA_SCOPES=public,private,secret
+BARONG_PUBLIC_KEY=<%= @barong_public_key %>
+PEATIO_PUBLIC_KEY=<%= @peatio_public_key %>
+SONIC_PUBLIC_KEY=<%= @sonic_public_key %>
