Feature: Add configs for Tower to template of secrets.yaml

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -3,7 +3,7 @@ secrets:
     scopes:
       public:
         minutesUntilAutoLogout: '35'
-        withCredentials: 'false'
+        withCredentials: 'true'
         finex: 'false'
         gaTrackerKey: ''
         rangerReconnectPeriod: '1'
@@ -26,6 +26,64 @@ secrets:
           'document',
           'address',
         ]
+        tablePageLimit: '50'
+        aml: 'false'
+        labelSwitcher: [
+            { name: 'email', label: [{ email: 'verified' }] },
+            { name: 'phone', label: [{ phone: 'verified' }] },
+            { name: 'profile', label: [{ profile: 'verified' }] },
+            { name: 'document', label: [{ document: 'verified' }] },
+        ]
+        plugins: []
+        roleTypes: [
+            {
+                value: 'Admin',
+                key: 'admin',
+            },
+            {
+                value: 'Member',
+                key: 'member',
+            },
+            {
+                value: 'Super Admin',
+                key: 'superadmin',
+            },
+            {
+                value: 'Accountant',
+                key: 'accountant',
+            },
+            {
+                value: 'Compliance',
+                key: 'compliance',
+            },
+            {
+                value: 'Technical',
+                key: 'technical',
+            },
+            {
+                value: 'Support',
+                key: 'support',
+            },
+            {
+                value: 'Trader',
+                key: 'trader',
+            },
+            {
+                value: 'Broker',
+                key: 'broker',
+            },
+        ]
+        allowedRoles: [
+          'admin',
+          'superadmin',
+          'accountant',
+          'compliance',
+          'support',
+          'technical',
+          'manager',
+        ]
+        devMode: 'true'
+        minutesBeforeWarningMessage: '1'
       private:
         database_host: <%=  @config['database']['host'] %>
         database_port: "<%=  @config['database']['port'] %>"
