--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -181,12 +181,15 @@ secrets:
         peatio_url: http://peatio:8080
         barong_url: http://barong:8080
         database_name: sonic
-        jwt_issuer: barong
+        jwt_issuer: sonic
         jwt_algo: RS256
         vault_addr: http://vault:8200
         deployment_id: <%= @config['app']['name'].downcase %>
       secret:
         jwt_private_key: <%= @sonic_private_key %>
+        sonic_public_key: <%= @sonic_public_key %>
+        peatio_public_key: <%= @peatio_public_key %>
+        barong_public_key: <%= @barong_public_key %>
 
   peatio:
     scopes:
