--- a/templates/config/peatio/management_api_v1.yml.erb
+++ b/templates/config/peatio/management_api_v1.yml.erb
@@ -1,13 +1,33 @@
 keychain:
-  applogic:
+  sonic:
     algorithm: RS256
     value: <%= @sonic_public_key %>
 
 scopes:
+  read_engines:
+    mandatory_signers:
+      - sonic
+    permitted_signers:
+      - sonic
+  write_engines:
+    mandatory_signers:
+      - sonic
+    permitted_signers:
+      - sonic
+  read_markets:
+    mandatory_signers:
+      - sonic
+    permitted_signers:
+      - sonic
+  write_markets:
+    mandatory_signers:
+      - sonic
+    permitted_signers:
+      - sonic
   read_operations:
     mandatory_signers:
-      - applogic
+      - sonic
     permitted_signers:
-      - applogic
+      - sonic
 
 jwt: {}
