Fix: Add market scopes to peatio management API

--- a/templates/config/peatio/management_api_v1.yml.erb
+++ b/templates/config/peatio/management_api_v1.yml.erb
@@ -14,6 +14,16 @@ scopes:
       - sonic
     permitted_signers:
       - sonic
+  read_markets:
+    mandatory_signers:
+      - sonic
+    permitted_signers:
+      - sonic
+  write_markets:
+    mandatory_signers:
+      - sonic
+    permitted_signers:
+      - sonic
   read_operations:
     mandatory_signers:
       - sonic
