--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -185,6 +185,7 @@ secrets:
         jwt_algo: RS256
         vault_addr: http://vault:8200
         deployment_id: <%= @config['app']['name'].downcase %>
+        opendax_addr: https://uat.opendax.app
       secret:
         jwt_private_key: <%= @sonic_private_key %>
         sonic_public_key: <%= @sonic_public_key %>
