--- a/templates/compose/app.yaml.erb
+++ b/templates/compose/app.yaml.erb
@@ -34,21 +34,25 @@ services:
       - ../config/barong/abilities.yml:/home/app/config/abilities.yml
     command: bash -c "kaigara bundle exec puma --config config/puma.rb"
 
-<% if @config['finex']['enabled'] %>
   finex-api:
     restart: always
-    image: "<%= @config['finex']['image'] %>"
+    image: "<%= @config['images']['finex'] %>"
+    env_file:
+      - ../config/finex.env
+      - ../config/kaigara.env
     command: "kaigara ./orderapi"
     volumes:
       - ../config/finex:/app/config:ro
 
   finex-engine:
     restart: always
-    image: "<%= @config['finex']['image'] %>"
+    image: "<%= @config['images']['finex'] %>"
+    env_file:
+      - ../config/finex.env
+      - ../config/kaigara.env
     command: "kaigara ./finex"
     volumes:
       - ../config/finex:/app/config:ro
-<% end %>
 
   applogic:
     restart: always
@@ -78,4 +82,19 @@ services:
       - "traefik.http.routers.sonic-<%= @name %>.tls.certresolver=myresolver"
       <%- else -%>
       - "traefik.http.routers.sonic-<%= @name %>.entrypoints=web"
+      <%- end -%>
+
+  tower:
+    restart: always
+    image: "<%= @config['images']['tower'] %>"
+    labels:
+      - "traefik.http.routers.tower-<%= @name %>.rule=PathPrefix(`/tower`)"
+      - "traefik.enable=true"
+      - "traefik.http.services.tower-<%= @name %>.loadbalancer.server.port=8080"
+      <%- if @config['ssl']['enabled'] -%>
+      - "traefik.http.routers.tower-<%= @name %>.entrypoints=websecure"
+      - "traefik.http.routers.tower-<%= @name %>.tls=true"
+      - "traefik.http.routers.tower-<%= @name %>.tls.certresolver=myresolver"
+      <%- else -%>
+      - "traefik.http.routers.tower-<%= @name %>.entrypoints=web"
       <%- end -%>
