--- a/templates/config/rango.env.erb
+++ b/templates/config/rango.env.erb
@@ -1,9 +1,3 @@
-RANGER_HOST=0.0.0.0
-RANGER_PORT=8080
-RANGER_CONNECT_SECURE="false"
-
-LOG_LEVEL=info
-
-RABBITMQ_HOST=rabbitmq
-
-JWT_PUBLIC_KEY=<%= @barong_public_key %>
+KAIGARA_DEPLOYMENT_ID=<%= @config['app']['name'].downcase %>
+KAIGARA_APP_NAME=rango
+KAIGARA_SCOPES=private
