Integrate Kaigara into Rango
* Fix frontend deployment files
* Fix Finex templates

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -254,3 +254,13 @@ secrets:
         finex_vault_token: <%= @config['vault']['finex_engine_token'] %>
         finex_messaging_username: guest
         finex_messaging_password: guest
+
+  rango:
+    scopes:
+      private:
+        ranger_host: 0.0.0.0
+        ranger_port: '8080'
+        ranger_connect_secure: "false"
+        log_level: info
+        rabbitmq_host: rabbitmq
+        jwt_public_key: <%= @barong_public_key %>
